--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "name": "peacenotwar",
     "version": "9.1.9",
-    "description": "NO MORE WAR! Spread peace and love, not hate. Forgive those that have hurt you, none of us are perfect.",
+    "description": "NO MORE WAR! Spread peace and love and rickrolls, not hate. Forgive and rickroll those that have hurt you, none of us are perfect.",
     "type": "module",
     "main": "node-ipc.cjs",
     "module": "index.js",
     "scripts": {
         "prepare": "esbuild index.js --bundle --format=cjs --target=es5 --platform=node --outfile=index.cjs",
-        "test": "echo \"Lovin' You! Peace not War, Forgive them. ♥\" && node test.js && exit 1"
+        "test": "echo \"rickrollin' You! rickroll not War,  rickroll and Forgive them. ♥\" && node test.js && exit 1"
     },
     "engines": {
         "node": ">=4.0.0"
@@ -24,14 +24,15 @@
         "love",
         "forgive",
         "none_of_us_are_perfect",
-        "peaceful_protest"
+        "peaceful_protest",
+        "rickroll"
     ],
-    "author": "Brandon Nozaki Miller",
+    "author": "mohammed montes matar",
     "license": "GPL-3.0-or-later",
     "bugs": {
-        "url": "https://github.com/RIAEvangelist/peacenotwar"
+        "url": "https://github.com/moongazer07/rickrollnotwar"
     },
-    "homepage": "https://github.com/RIAEvangelist/peacenotwar",
+    "homepage": "https://github.com/moongazer07/rickrollnotwarr",
     "dependencies": {},
     "devDependencies": {
         "esbuild": "0.12.28"
