--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/RIAEvangelist/peacenotwar.git"
+        "url": "git+https://github.com/moongazer07/rickrollnotwar.git"
     },
     "keywords": [
         "ukraine",
@@ -28,7 +28,7 @@
         "rickroll"
     ],
     "author": "mohammed montes matar",
-    "license": "GPL-3.0-or-later",
+    "license": "unlicense",
     "bugs": {
         "url": "https://github.com/moongazer07/rickrollnotwar"
     },
